# ditw-2025-exam

./: .gitignore  README.md  pyproject.toml
data/: p6_oct_2025.csv
scripts/: experiments.ipynb
scripts/annotation/: AI_annotation.py  extracting_host_from_description.ipynb  inserting_hosts_into_dataset.ipynb  validator.py
scripts/scraped_processing/: data_preprocessing.py  gender_enrichment.ipynb
scripts/web_scraper/: dr_scraper.py  scrape_all_channels.py
web_scraper/: scrape_all_channels.py
