[project]
name = "diw-dr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "musicbrainzngs>=0.7.1",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pyprojroot>=0.3.0",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
    "seaborn>=0.13.2",
    "urllib3>=2.5.0",
]
